Cleanup of mobile site

--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -50,10 +50,12 @@
         <input id="password" type="password" class="form-control" value="" placeholder="password">
         <br>
         <input type="button" id="btn-login" class="btn btn-primary" onclick="login()" value="Log In">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://bikecounter.traklis.com/register">New User? Register</a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.bikecounts.com/register">New User? Register</a>
         <br><br>
-        <div id="err-login" class="alert alert-danger" style="display:none"></p>
-        </form>
+        <div id="err-login" class="alert alert-danger" style="display:none"></div>
+        <script type="text/javascript">
+            document.write(location.host);
+        </script>
     </div>
     </div>
 </script>
