--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -74,16 +74,16 @@
 
 <script id="tpl-login" type="text/template">
     <div class="row">
-    <div class="col-xs-3 col-xs-offset-1">
+    <div class="col-xs-4">
         <img src="assets/img/phlbikeco.png">
     </div>
-    <div class="col-xs-8" style="padding-top:5px">
+    <div class="col-xs-7" style="padding-top:25px">
         <input id="username" type="text" class="form-control" value="" placeholder="username" autocapitalize="off">
         <br>
         <input id="password" type="password" class="form-control" value="" placeholder="password">
         <br>
         <input type="button" id="btn-login" class="btn btn-primary" onclick="login()" value="Log In">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.bikecounts.com/register">New User? Register</a>
+        <br><br><a href="https://www.bikecounts.com/register">New User? Register</a>
         <br><br>
         <div id="err-login" class="alert alert-danger" style="display:none"></div>
         <script type="text/javascript">
@@ -96,7 +96,7 @@
 <script id="tpl-home" type="text/template">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
-            <h4>Let's Get Started</h4>
+            <h3>Let's Get Started</h3>
             <a href="#upcoming">Appointments</a>
             <br>
             <a href="#help">Help</a>
