--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -150,17 +150,21 @@
 <script id="tpl-appt" type="text/template">
 <div class="row appcontainer">
     <div class="col-xs-12 text-center">
+
         <div class="row">
-            <span class="col-xs-4 text-left">
+            <span class="col-xs-2 text-left">
                 <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
             </span>
-            <span class="col-xs-4 text-center">
+            <span class="col-xs-8 text-center">
                 <h3>{{location.name}}</h3>
             </span>
+            <span class="col-xs-2 text-left">
+            </span>
         </div>
+
         <a href="javascript:startSession({{id}})">Start Recording</a>
         <div style="width:100%;height:300px">
-            <div style="width:100%;height:100%;" id="map"></div>
+            <div style="width:100%;height:80%;" id="map"></div>
         </div>
             <!--
             <table>
