--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -110,7 +110,7 @@
 <script id="tpl-upcoming" type="text/template">
     <div class="row">
         <span class="col-xs-4 text-left">
-            <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+            <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#upcoming')" value="&laquo;&nbsp;Home">
         </span>
         <span class="col-xs-8 text-left">
             <h3>{{location.name}}</h3>
@@ -139,7 +139,7 @@
         <div class="col-xs-12 text-center">
             <div class="row">
             <span class="col-xs-4 text-left">
-                <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+                <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#upcoming')" value="&laquo;&nbsp;Home">
             </span>
             <span class="col-xs-8 text-left">
                 <h3>{{location.name}}</h3>
@@ -157,7 +157,7 @@
 
         <div class="row">
             <span class="col-xs-2 text-left">
-                <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+                <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#upcoming')" value="&laquo;&nbsp;Home">
             </span>
             <span class="col-xs-8 text-center">
                 <h3>{{location.name}}</h3>
@@ -418,7 +418,7 @@
 <div>
     <div class="row appcontainer">
         <div class="col-xs-10 col-md-offset-1">
-            <button class="btn btn-primary btn-nav" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
+            <button class="btn btn-primary btn-nav" onclick="window.location.replace('#upcoming')">&laquo;&nbsp;Home</button>
             <h3>Finished!  Thank You</h3>
         </div>
     </div>
@@ -429,7 +429,7 @@
     <div>
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <button class="btn btn-primary btn-nav" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
+                <button class="btn btn-primary btn-nav" onclick="window.location.replace('#upcoming')">&laquo;&nbsp;Home</button>
                 <br><br>
                 <a href="#help">Help</a><br>
                 Help content
@@ -442,7 +442,7 @@
   <div>
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <button class="btn btn-primary btn-nav" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
+        <button class="btn btn-primary btn-nav" onclick="window.location.replace('#upcoming')">&laquo;&nbsp;Home</button>
         <br><br>
         <h4>Admin Tools</h4>
         Current API Url: <span id="api_url">{{config.apiUrl}}</span>
