Sliders to buttons

--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -270,21 +270,25 @@
       <input style="" id="btn_end" type="button" class="btn btn-primary btn-event" value="End" onclick="endSession()">
 
       <div id="checkbox_div">
+      <hr>
       <table style="margin:10px auto">
-          <tr>
+          <!--<tr>
               <td>Sidewalk</td>
               <td>Wrong Way</td>
-          </tr>
+          </tr>-->
           <tr>
               <td>
-                  <label class="checkbox-inline">
+                  <input data-on="N" style="padding:10px 5px;font-size:14px;background-color:#b28585" id="btn_sidewalk" type="button" class="btn btn-primary" value="SideWalk">
+                  <!--<label class="checkbox-inline">
                     <input id="cbx_sidewalk" type="checkbox" data-toggle="toggle" data-on="Y" data-off="N" class="bstoggle" data-width="50">
-                  </label>
+                  </label>-->
               </td>
               <td>
+                  <input data-on="N" style="padding:10px 5px;font-size:14px;background-color:#b28585" id="btn_sidewalk" type="button" class="btn btn-primary" value="WrongWay">
+                  <!--
                   <label class="checkbox-inline">
                     <input id="cbx_wrongway" type="checkbox" data-toggle="toggle" data-on="Y" data-off="N" class="bstoggle" data-width="50">
-                  </label>
+                  </label>-->
               </td>
           </tr>
       </table>
