I_suck_with_semicolons
just forgot a semi colon inside a function within the lib.js file.....
was causing the mobile webapp to not load.

--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -454,7 +454,7 @@
 </script>
 
 
-<script src="cordova.js"></script>
+<!-- <script src="cordova.js"></script> -->
 <script src="jslib/jquery.js"></script>
 <script src="jslib/jquery-ui.min.js"></script>
 <script src="jslib/jquery.storage.js"></script>
